test/libhyperion/syntaxTests/types/address/address_literal_to_payable_err.hyp
contract C {
    function f() public pure {
        address payable a = address(Z6d2754Dc20CF4d38C293a967bc549D0381A8A11aA0882DFb);
        address payable b = Z6d2754Dc20CF4d38C293a967bc549D0381A8A11aA0882DFb;
    }
}
// ----
// TypeError 9574: (52-122): Type address is not implicitly convertible to expected type address payable.
// TypeError 9574: (132-193): Type address is not implicitly convertible to expected type address payable.
